--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,3 +1,5 @@
+{% load staticfiles %} <!-- New line -->
+
 <!DOCTYPE html>
 <html>
 
@@ -13,7 +15,9 @@
         </div>
         <div>
             <a href="/rango/about/">About</a><br />
+            <img src="{% static 'images/rango.jpg' %}"
+                alt="Picture of Rango" /> <!-- New line -->
         </div>
     </body>
-    
+
 </html>
