--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -12,12 +12,25 @@
         <h1>Rango says...</h1>
         <div>
             hey there partner! <br />
-        <strong>{{ boldmessage }}</strong><br />
+        <strong>{{ boldmessage }}</strong>
         </div>
+
+        <div>
+        {% if categories %}
+            <ul>
+                {% for category in categories %}
+                    <li>{{ category.name }}</li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
+        </div>
+
         <div>
             <a href="/rango/about/">About</a><br />
             <img src="{% static 'images/rango.jpg' %}"
-                alt="Picture of Rango" /> <!-- New line -->
+                alt="Picture of Rango" /> 
         </div>
     </body>
 
