--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -12,7 +12,7 @@
         <h1>Rango says...</h1>
         <div>
             here is the about page. <br />
-            <a href="/rango/index/">Index</a><br />
+            <a href="/rango/">Index</a><br />
         <strong>{{ boldmessage }}</strong><br />
         </div>
         <div>
