--- a/templates/rango/restricted.html
+++ b/templates/rango/restricted.html
@@ -2,7 +2,11 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    Restricted Page
+<div class="jumbotron p-1">
+    <div class="container">
+        Restricted Page
+    </div>
+</div>
 {% endblock %}
 
 {% block body_block %}
