--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -6,7 +6,11 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Add a Page</h1>
+<div class="jumbotron p-2">
+    <div class="container">
+        <h1>Add a Page</h1>
+    </div>
+</div>
     <div>
         <form id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
             {% csrf_token %}
@@ -17,6 +21,7 @@
                 {{ field.errors }}
                 {{ field.help_text }}
                 {{ field }}
+                <br>
             {% endfor %}
             <input type="submit" name="submit" value="Create Page" />
         </form>
