--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -5,13 +5,18 @@
 {% endblock %}
 
 {% block body_block %}
-<h1>Change Password</h1>
+<div class="jumbotron p-4">
+    <div class="container">
+        <h1>Change Password</h1>
+     </div>
+</div>
+
 
 <form method="post" action=".">
     {% csrf_token %}
     {{ form.as_p }}
 
-    <input type="submit" value="{% trans 'Submit' %}" />
+    <input type="submit" value="password_change" />
 </form>
 
 {% endblock %}
