--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -5,7 +5,11 @@
 {% endblock %}
 
 {% block body_block %}
-<h1>Register Here</h1>
+<div class="jumbotron p-3">
+    <div class="container">
+        <h1>Register Here</h1>
+    </div>
+</div>
 <form method="post" action=".">
     {% csrf_token %}
     {{ form.as_p }}
