--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,29 +1,33 @@
-{% extends 'rango/base.html' %}
-{% load staticfiles %}
+{% extends "rango/base.html" %}
 
-{% block title_block %}
-    Add a Page
-{% endblock %}
+{% block title %}Add Page{% endblock %}
 
 {% block body_block %}
-<div class="jumbotron p-2">
+<div class="jumbotron p-4">
     <div class="container">
-        <h1>Add a Page</h1>
+        <h1 class="jumbotron-heading">Add a Page to {{category.name}}</h1>
     </div>
 </div>
-    <div>
-        <form id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
+
+<div class="container">
+    <div class="row">
+        <form role="form" id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
-                {{ hidden }}
+            {{ hidden }}
             {% endfor %}
             {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-                <br>
+            {{ field.errors }}
+            {{ field.help_text }}<br />
+            {{ field }}<br />
+            <div class="p-2"></div>
             {% endfor %}
-            <input type="submit" name="submit" value="Create Page" />
+            <br />
+            <button class="btn btn-primary" type="submit" name="submit">
+                Add Page
+            </button>
+            <div class="p-5"></div>
         </form>
     </div>
+</div>
 {% endblock %}
