--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    Homepage
+Homepage
 {% endblock %}
 
 {% block body_block %}
@@ -11,11 +11,11 @@
         <h1 class="jumbotron-heading">Rango says...</h1>
         <div>
             <h2 class="h2">
-            {% if user.is_authenticated %}
+                {% if user.is_authenticated %}
                 howdy {{ user.username }}!
-            {% else %}
+                {% else %}
                 hey there partner!
-            {% endif %}
+                {% endif %}
             </h2>
             <strong>{{ boldmessage }}</strong>
         </div>
@@ -23,45 +23,49 @@
 </div>
 
 
-    <div>
-        <h2>Most Liked Categories</h2>
-    {% if categories %}
-        <ul>
-            {% for category in categories %}
-            <li>
-                <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
-            </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <strong>There are no categories present.</strong>
-    {% endif %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card mb-6">
+                <div class="card-body">
+                    <h2>Most Liked Categories</h2>
+                    <p class="card-text">
+                        {% if categories %}
+                    <ul class="list-group">
+                        {% for category in categories %}
+                        <li class="list-group-item"> 
+                            <a href="{% url 'rango:show_category' category.slug %}">
+                                {{ category.name }}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    {% else %}
+                    <strong>There are no categories present.</strong>
+                    {% endif %}
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card mb-6">
+                <div class="card-body">
+                    <h2>Most Viewed Pages</h2>
+                    <p class="card-text">
+                        {% if pages %}
+                    <ul>
+                        {% for page in pages %}
+                        <li>
+                            <a href="{{ page.url }}">{{ page.title }}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    {% else %}
+                    <strong>There are no pages present.</strong>
+                    {% endif %}
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div>
-        {% if pages %}
-        <h2>Most Viewed Pages</h2>
-            <ul>
-                {% for page in pages %}
-                <li>
-                    <a href="{{ page.url }}">{{ page.title }}</a>
-                </li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <strong>There are no pages present.</strong>
-        {% endif %}
-        </div>
-        <div>
-            <img src="{% static 'images/rango.jpg' %}"alt="Picture of Rango" /> 
-        </div>
+</div>
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
