--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -12,7 +12,7 @@
     <title>
         Rango - {% block title_block %}How to Tango with Django!{% endblock %}
     </title>
-    
+    {% block cssblock %} {% endblock %}
     <!-- Bootstrap core CSS -->
     <link href="https://getbootstrap.com/docs/4.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     
