--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -2,6 +2,12 @@
 
 {% block title %}Add Page{% endblock %}
 
+{% block cssblock %}
+    <style>
+        
+    </style>
+{% endblock %}
+
 {% block body_block %}
 <div class="jumbotron p-4">
     <div class="container">
@@ -11,7 +17,7 @@
 
 <div class="container">
     <div class="row">
-        <form role="form" id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
+        <form role="form" id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}" enctype="multipart/form-data">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
             {{ hidden }}
