--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -19,7 +19,7 @@
         {% if pages %}
         <ul>
             {% for page in pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            <li><a href="{% url 'rango:show_page' page.title %}">{{ page.title }}</a></li>
             {% endfor %}
         </ul>
         {% else %}
