--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,5 +1,7 @@
 {% extends 'rango/base.html' %}
 
+
+
 {% block title_block %}
 Create your Account
 {% endblock %}
@@ -19,72 +21,79 @@ Create your Account
      
  </script>
 
+ 
+
+<style>
+    #questionheader {
+        font-weight: bold;
+    }
+</style>
+
     <div class="container pt-5">
-        <h class = "display-4 text-danger";>Create Your Account</h> 
+        <h class = "display-4 text-danger";>Create Your Account -- Step 1</h> 
     </div>
 
     <div class="container pt-5">
-        <h3>Your Account Details</h3>
-        <h5>Compulsory Field</h5>
+        <h2>Your Account Details</h2><br>
+        <h5>Compulsory Fields</h5><br>
+        <p>Please enter your account details for registration.</p><br>
     </div>
 
 <div class="container">
         <div class="form-group">
             <form role="form" method="post" action=".">
                 {% csrf_token %}
-                <div class="col-md-5">
-                        <label for="id_username">Username:</label>
+                <div class="col-md-5 mt-1em">
+                    <div>
+                        <label for="id_username" id="questionheader">Username:</label>
                         <input class="form-control" id="id_username" maxlength="20" name="username" type="text" placeholder="required" required />
                         <span class="helptext">
                          20 characters or fewer. Letters, digits and @/./+/-/_ only.
                         </span>
-                    
-                    <div>
-                        <label for="id_email">E-mail:</label>
+                        <span class="helptext" style="color:red">
+                            {{form.username.errors}} 
+                        </span>
+                    </div>
+                    <div class = "mt-3">
+                        <label for="id_email" id="questionheader">E-mail:</label>
                         <input class="form-control" id="id_email" name="email" type="email" placeholder="required" required/>
+                        <span class="helptext">
+                            <color=red>{{form.email.errors}}</color>
+                        </span>
                     </div>
-                    <div>
-                        <label for="id_password1">Password:</label>
+                    <div class = "mt-3">
+                        <label for="id_password1" id="questionheader">Password:</label>
                         <input class="form-control" id="id_password1" name="password1" type="password" onkeyup='passwordvalidate();' placeholder="required" required/>
+                        <span class="helptext">
+                            At least 8 characters and should be a combination of numbers and characters.
+                        </span>
                     </div>
-                    <div>
-                        <label for="id_password2">Password confirmation:</label>
+                    <div class = "mt-3">
+                        <label for="id_password2" id="questionheader">Password confirmation:</label>
                         <input class="form-control" id="id_password2" name="password2" type="password" onkeyup='passwordvalidate();' placeholder="required" required/>
-                        <span id='validationmessage'></span> 
+                        <span id='validationmessage'></span>
+                        <span class="helptext" style="color:red">
+                        {{form.password2.errors}} 
+                        </span>
                     </div>
-                    <div class="pt-4">
-                        <h3>Your Profile Details</h3>
-                        <h5>Optional Field</h5>
-                    </div>
-                    <div>
-                        <label for="id_first_name">First Name:</label>
-                        <input class="form-control" id="id_first_name" name="firstname" type="text"/> 
-                    </div>
-
-                    <div>
-                        <label for="id_last_name">Last Name:</label>
-                        <input class="form-control" id="id_last_name" name="lastname" type="text"/>
+                    <div class = "mt-3">
+                        <label for="id_first_name" id="questionheader">First Name:</label>
+                        <input class="form-control" id="id_first_name" name="firstname" type="text" placeholder="required" required/> 
                     </div>
 
-                    <!--<div class="form-group">
-                        <label for="level_expertise">Level of Expertise (Select one)</label>
-                        <select class="form-control id="level_expertise">
-                            <option value="beginner">Beginner</option>
-                            <option value="junior">Junior Developer</option>
-                            <option value="senior">Senior Developer</option>
-                            <option value="professional">Professional</option>
-                        </select>
-                    </div>-->
-                <div class="row">  
-                    <div class="pt-5 col-sm-12 col-md-12 col-xs-12">  
-                        <div class="float-right">
-                            <button class="btn btn-primary" type="submit">Register</button>
-                        </form> 
+                    <div class = "mt-3">
+                        <label for="id_last_name" id="questionheader">Last Name:</label>
+                        <input class="form-control" id="id_last_name" name="lastname" type="text" placeholder="required" required/>
+                    </div>
+
+                    <div class="row">  
+                        <div class="pt-5 col-sm-12 col-md-12 col-xs-12">  
+                            <div class="float-right">
+                                <button class="btn btn-primary" type="submit">Register</button>
                             <a href="{% url 'rango:index' %}" class="btn btn-danger" role="button">Cancel</a>
+                            </div>  
                         </div>  
-                </div>  
-                
-
+                    </div>
             </form>
         </div>
     </div>
