--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -61,15 +61,16 @@ Unknown Category
     <!--page part-->
 
     <div class='col-md-9 border'>
-        <h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
+        <h3><a href="{% url 'rango:show_page' category.slug page.title%}">{{ page.title }}</a></h3>
         <p>Descriptions...</p>
-        <small class='text-right'>Views = {{page.views}} Likes = {{pages.likes}}</small>
+        <small class='text-right'>Views = {{page.views}} Likes = {{page.likes.count}}</small>
     </div>
-
-
+    
     <!--comment part-->
     <div class='col-md-3 border'>
-        <p>comments</p>
+        {% if page.comment.first is not None %}
+            {{ page.comment.first.user }}: {{ page.comment.first.input }}
+        {% endif %}
     </div>
 
 </div>
