--- a/templates/rango/page.html
+++ b/templates/rango/page.html
@@ -23,7 +23,8 @@
         <div id="container">
             <div class="container__half">
             <div>
-                <p><a href="{{ page.url }}">Link to the website</a></p>
+                <!--<p><a href="{{ page.url }}">Link to the website</a></p>-->
+                <a href="{% url 'rango:page-counter' page.pk %}" target="_blank" rel="noopener noreferrer">Link to the website</a>
             </div>
 
             <div>
@@ -73,20 +74,21 @@
                     {% if not page.comment.all %}
                         No Comments
                     {% else %}
-                        {% for comment in page.comment.all %}
+                        {% for comment in comments %}
                             <Strong>{{ comment.user.username }} - {{ comment.time }} <br/></Strong>
                             {{ comment.input }} 
-                            
+
+                            {% if user.is_authenticated %}
                             <form action="{% url 'rango:like_comment' comment.pk %}" method="POST">
                                 {% csrf_token %}
-                                {% if user not in comment.likes.all %}
-                                    <button type="submit", name="comment_id", value="{{ comment.id }}">Like</button>
-                                {% else %}
-                                    <button type="submit", name="comment_id", value="{{ comment.id }}">UnLike</button>
-                                {% endif %}
+                                    {% if user not in comment.likes.all %}
+                                        <button type="submit", name="comment_id", value="{{ comment.id }}">Like</button>
+                                    {% else %}
+                                        <button type="submit", name="comment_id", value="{{ comment.id }}">UnLike</button>
+                                    {% endif %}
                                 - {{ comment.likes.count }} Likes
                             </form>
-                            
+                            {% endif %}
                             <br/> <br/>
 
                         {% endfor %}
