--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,93 +1,136 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 {% load rango_template_tags %}
-<html lang="en">
-    <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+<html>
+
+<head lang="en">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="ITech project">
     <meta name="author" content="group caffine">
-    <!--
-        <meta name="generator" content="Jekyll v3.8.5">
-    -->
     <link rel="icon" href="{% static 'images/rango.jpg' %}">
-    <title>
-        Rango - {% block title_block %}Enhanced Rango{% endblock %}
-    </title>
-    {% block cssblock %} {% endblock %}
-    <!-- Bootstrap core CSS -->
-    <link href="https://getbootstrap.com/docs/4.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    
-    <!-- Custom styles for this template -->
-    <link href="{% static 'rango_css/base_style.css' %}" rel="stylesheet">
-    <!-- 
-    <link href="/templates/rango/base_style.css" rel="stylesheet">
+    <!--get boostrsp-->
+    <link href="https://getbootstrap.com/docs/4.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!--
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     -->
-    </head>
-    
-    <body>
-        <!-- top navigation bar: change to banner-->
-        <header>
-            <div class='banner'>
+    <!-- CSS 
+    <link href="{% static 'rango_css/base_style.css' %}" rel="stylesheet">
+-->
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-            </div>
+    <!-- Add icon library -->
+    <!--for social media button-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <style>
+        .fa {
+            padding: 0px;
+            font-size: 40px;
+            width: 40px;
+            text-align: center;
+            text-decoration: none;
+            margin: 5px 5px;
+        }
+
+        .fa-twitter {
+            background: #55ACEE;
+            color: white;
+        }
+    </style>
+    <title>
+        Rango -
+        {% block title_block %}
+        How to Tango with Django!
+        {% endblock %}
+    </title>
+    {% block JS_block %}
+    {% endblock %}
+</head>
 
 
-            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark p-0">
-                <a class="navbar-brand p-2" href="{% url 'rango:index' %}">Rango</a>
+<body>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'rango:index' %}">Home</a></li>
-                        <li class="nav-item "><a class="nav-link" href="{% url 'rango:about' %}">About</a></li>
-                        {% if user.is_authenticated %}
-                        <li class="nav-item "><a class="nav-link" href="{% url 'rango:restricted' %}">Restricted</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'rango:add_category' %}">Add Category</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'auth_password_change' %}">Change Password</a></li>
-                        {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'registration_register' %}">Register Here</a></li>
-                        <li class="nav-item "><a class="nav-link" href="{% url 'auth_login' %}">Login</a></li>
-                        {% endif %}
-                    </ul>
-                    
-                </div>
-            
-            </nav>
-        </header>
 
-        
-        <div class="container-fluid">
-            <div class="row">
-                <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-                    <div class="sidebar-sticky">
-                    {% block sidebar_block %}
-                        {% get_category_list category %}
-                    {% endblock %}
-                    </div>
-                </nav>
-                
-                <main role="main" class="col-md-9  ml-sm-auto col-lg-10 px-4">		
-                    {% block body_block %}{% endblock %}
-                    
-                    <!-- FOOTER -->
-                    <footer>
-                        <p class="float-right"><a href="#">Back to top</a></p>
-                        <p>&copy; 2020 Tango With Django 2 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-                    </footer>
-                </main>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--LHS logo-->
+        <a class="navbar-brand p-2" href="{% url 'rango:index' %}">Rango</a>
+
+        <!--for collapse when screen too small-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- nav bar 1st line -->
+        <div class="collapse navbar-collapse w-100 flex-md-column" id="navbarCollapse">
+            <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <li>
+                    <p class='navbar-text'>Welcome back, {{ user.username }}! </p>
+                </li>
+                <li>
+                    <button type="submit" class="btn btn-outline-success"><a
+                            href="{% url 'auth_logout' %}?next=/rango/">Logout</a></button>
+                </li>
+
+                {% else %}
+                <li>
+                    <form class="form-inline my-2 my-lg-0" role='form' action="{% url 'auth_login' %}" method='post'>
+                        {% csrf_token %}
+                        <input type="text" name='username' class="form-control" placeholder="User ID">
+                        <input type="password" name="password" class="form-control" placeholder="Password">
+                        <button type="submit" value='submit' class="btn btn-outline-success my-2 my-sm-0">Login</button>
+                    </form>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'registration_register' %}">Register Here <span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Or Login in using</a>
+                </li>
+                <li><a href="#" method='post' class="fa fa-twitter"></a></li>
+
+                <li><a href="{% url 'social:begin' 'github' %}">Login with GitHub</a></li>
+                {% endif %}
+            </ul>
+            <!-- nav bar 2nd line -->
+            <ul class="navbar-nav ml-auto">
+                <li>
+                    <form class="form-inline my-2 my-lg-1" action='#'>
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </li>
+
+            </ul>
         </div>
-        
-        <!-- Bootstrap core JavaScript -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.2/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
-        <script src="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.js"></script>
-    </body>
+    </nav>
+
+
+    <div class="container-fluid">
+        <div class="row">
+            <nav class="col-md-2 sidebar">
+                <div class="sidebar-sticky">
+                    {% block sidebar_block %}
+                    {% get_category_list category %}
+                    {% endblock %}
+                </div>
+            </nav>
+
+            <main role="main" class="col-md-9">
+                {% block body_block %}{% endblock %}
+
+            </main>
+        </div>
+    </div>
+
+    <!--footer-->
+</body>
+
 </html>
