--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -62,6 +62,7 @@ Unknown Category
 
     <div class='col-md-9 border'>
         <h3><a href="{% url 'rango:show_page' category.slug page.title%}">{{ page.title }}</a></h3>
+        <a href="{% url 'rango:page-counter' page.pk %}" target="_blank" rel="noopener noreferrer">Link to the website</a>
         <p>Descriptions...</p>
         <small class='text-right'>Views = {{page.views}} Likes = {{page.likes.count}}</small>
     </div>
