add a new page gives a tag (userlevel) to the page

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -49,6 +49,8 @@
         How to Tango with Django!
         {% endblock %}
     </title>
+    {% block cssblock %}
+    {% endblock %}
     {% block JS_block %}
     {% endblock %}
 </head>
