--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -69,9 +69,7 @@ Unknown Category
     
     <!--comment part-->
     <div class='col-md-3 border'>
-        {% if page.comment.first is not None %}
-            {{ page.comment.first.user }}: {{ page.comment.first.input }}
-        {% endif %}
+        Comment...
     </div>
 
 </div>
